@@ -21,6 +21,7 @@
       VimperatorLeave respectively
     * IMPORTANT: 'verbose' is now by default at 1, set to 0 to not show any status messages
 
+    * :hardcopy now supports output redirection to a file on Unix and MacUnix
     * add ";f" extended hint mode to focus a frame
     * add "r", "l", and "b" to 'guioptions' to toggle the scrollbars.
     * remove spaces and newlines when open urls starting with http:// or similar
